--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <app-header></app-header>
-    <app-menagere-list></app-menagere-list>
-    <app-footer></app-footer>
-</body>
-
-</html>
+<app-header></app-header>
+<router-outlet></router-outlet>
