suite  front-end

--- a/src/app/addmenagere/addmenagere.component.html
+++ b/src/app/addmenagere/addmenagere.component.html
@@ -17,6 +17,13 @@
             </div>
         </div>
         <div class="mb-3">
+            <label for="email">Adresse </label>
+            <input type="text" class="form-control" placeholder="lomé">
+            <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+            </div>
+        </div>
+        <div class="mb-3">
             <label for="country">Sexe</label>
             <select class="custom-select d-block w-100" id="country" required>
       <option value="">Choisir...</option>
@@ -25,8 +32,8 @@
     </select>
         </div>
         <div class="mb-3">
-            <label for="address">Addresse</label>
-            <input type="text" class="form-control" id="address" placeholder="1234 lomé" required>
+            <label for="address">Numéro téléphone</label>
+            <input type="text" class="form-control" id="address" placeholder="91428199" required>
             <div class="invalid-feedback">
                 Please enter your shipping address.
             </div>
