--- a/src/app/compte/compte.component.html
+++ b/src/app/compte/compte.component.html
@@ -25,8 +25,8 @@
   </select>
         </div>
         <div class="mb-3">
-            <label for="address">Addresse</label>
-            <input type="text" class="form-control" id="address" placeholder="1234 lomé" required>
+            <label for="address">Password</label>
+            <input type="password" class="form-control" id="address" required>
             <div class="invalid-feedback">
                 Please enter your shipping address.
             </div>
