--- a/src/app/menagere-list/menagere-list.component.html
+++ b/src/app/menagere-list/menagere-list.component.html
@@ -38,7 +38,7 @@
             <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
             <p>
                 <a href="#" class="btn btn-primary my-2">S'enregistrer</a>
-                <a href="#" class="btn btn-secondary my-2">Se connecter</a>
+                <a href="#" class="btn btn-success my-2">Se connecter</a>
             </p>
         </div>
     </section>
